--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_selected_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_selected_list.html
@@ -62,6 +62,10 @@
     var ATTRIBUTE_LIST_DATA = [[${attributeListData}]] ;
     var ASSET_SELECTED_CODE =  [[${assetSelectedCode}]];
 
+    var OWNER_CODE =  [[${ownerCode}]];
+
+    
+
 
 </script>
 
