--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_collection_return/asset_collection_return_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_collection_return/asset_collection_return_form.html
@@ -1,8 +1,8 @@
-<!-- 
+<!--
 /**
  * 资产退库 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-27 10:03:00
+ * @since 2021-11-17 13:27:49
  */
  -->
  <!DOCTYPE html>
@@ -63,7 +63,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('存放位置')}">存放位置</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <div id="positionId" input-type="select" th:data="${'/service-eam/eam-position/query-list'}"></div>
+                            <div id="positionId" input-type="select" th:data="${'/service-eam/eam-position/query-list'}" extraParam="{}"></div>
                         </div>
                     </div>
 
