--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_repair/asset_repair_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_repair/asset_repair_list.html
@@ -1,8 +1,8 @@
-<!-- 
+<!--
 /**
  * 资产报修 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-26 15:27:41
+ * @since 2021-11-17 13:33:36
  */
  -->
  <!DOCTYPE html>
@@ -26,7 +26,7 @@
 <body style="overflow-y: hidden">
 
 <div class="layui-card">
- 
+
     <div class="layui-card-body" style="">
 
         <div class="search-bar" style="">
@@ -39,7 +39,7 @@
                     <!-- 办理状态 , status ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('办理状态')}" class="search-label status-label">办理状态</span><span class="search-colon">:</span></div>
-                        <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}" style="width:150px"></div>
+                        <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}" style="width:150px" extraParam="{}"></div>
                     </div>
                     <!-- 业务名称 , name ,typeName=text_input, isHideInSearch=true -->
                     <!-- 计划完成日期 , planFinishDate ,typeName=date_input, isHideInSearch=true -->
@@ -50,7 +50,7 @@
                     <!-- 维修状态 , repairStatus ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('维修状态')}" class="search-label repairStatus-label">维修状态</span><span class="search-colon">:</span></div>
-                        <div id="repairStatus" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetRepairStatusEnum')}" style="width:150px"></div>
+                        <div id="repairStatus" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetRepairStatusEnum')}" style="width:150px" extraParam="{}"></div>
                     </div>
                     <!-- 业务编号 , businessCode ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
@@ -60,7 +60,7 @@
                     <!-- 维修类型 , type ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('维修类型')}" class="search-label type-label">维修类型</span><span class="search-colon">:</span></div>
-                        <div id="type" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_repair_type'}" style="width:150px"></div>
+                        <div id="type" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_repair_type'}" style="width:150px" extraParam="{}"></div>
                     </div>
 
 
@@ -112,24 +112,24 @@
 <!-- 表格工具栏 -->
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
-        <button th:if="${perm.checkAuth('eam_asset_repair:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
+        <button th:if="${perm.checkAuth('eam_asset_repair:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button " lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
     </div>
 </script>
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
 
-    <button th:if="${perm.checkAuth('eam_asset_repair:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
-    <button th:if="${perm.checkAnyAuth('eam_asset_repair:update','eam_asset_repair:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button" lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
+    <button th:if="${perm.checkAuth('eam_asset_repair:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button " lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
+    <button th:if="${perm.checkAnyAuth('eam_asset_repair:update','eam_asset_repair:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button " lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
 
 
-    <button th:if="${perm.checkAuth('eam_asset_repair:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
+    <button th:if="${perm.checkAuth('eam_asset_repair:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button " lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
 
-    <button class="layui-btn layui-btn-xs  for-approval-button " lay-event="for-approval" th:text="${lang.translate('送审')}" data-id="{{d.id}}">送审</button>
-    <button class="layui-btn layui-btn-xs  confirm-data-button " lay-event="confirm-data" th:text="${lang.translate('确认维修')}" data-id="{{d.id}}">确认维修</button>
-    <button class="layui-btn layui-btn-xs  finish-data-button " lay-event="finish-data" th:text="${lang.translate('结束维修')}" data-id="{{d.id}}">结束维修</button>
-    <button class="layui-btn layui-btn-xs  revoke-data-button " lay-event="revoke-data" th:text="${lang.translate('撤销')}" data-id="{{d.id}}">撤销</button>
-    <button class="layui-btn layui-btn-xs  download-bill-button " lay-event="download-bill" th:text="${lang.translate('单据')}" data-id="{{d.id}}">单据</button>
+    <button th:if="${perm.checkAuth('eam_asset_repair:for-approval')}"class="layui-btn layui-btn-xs  for-approval-button " lay-event="for-approval" th:text="${lang.translate('送审')}" data-id="{{d.id}}">送审</button>
+    <button th:if="${perm.checkAuth('eam_asset_repair:confirm')}"class="layui-btn layui-btn-xs  confirm-data-button " lay-event="confirm-data" th:text="${lang.translate('确认维修')}" data-id="{{d.id}}">确认维修</button>
+    <button th:if="${perm.checkAuth('eam_asset_repair:finish')}"class="layui-btn layui-btn-xs  finish-data-button " lay-event="finish-data" th:text="${lang.translate('结束维修')}" data-id="{{d.id}}">结束维修</button>
+    <button th:if="${perm.checkAuth('eam_asset_repair:revoke')}"class="layui-btn layui-btn-xs  revoke-data-button " lay-event="revoke-data" th:text="${lang.translate('撤销')}" data-id="{{d.id}}">撤销</button>
+    <button th:if="${perm.checkAuth('eam_asset_repair:bill')}"class="layui-btn layui-btn-xs  download-bill-button " lay-event="download-bill" th:text="${lang.translate('单据')}" data-id="{{d.id}}">单据</button>
 
 </script>
 
